<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="v1.moonge.moonge.register_new_user"
    android:background="@color/wallet_holo_blue_light">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_marginBottom="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/welcome_sign_up_txt"
            android:text="@string/welcome_to_moonge"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/first_name"
                android:hint="@string/first_name_hint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/first_name_left_drawble"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/last_name"
                android:hint="@string/last_name_hint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/first_name_left_drawble"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/email"
                android:hint="@string/email_hint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/email_icon_registaion"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/phone_number"
                android:hint="@string/phone_number_hint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/phone_number_register"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/password_register"
                android:hint="@string/password_hint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/password_register"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="textPassword" />

            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/password_eye"
                android:button="@drawable/password_eye"

                android:layout_marginLeft="-30dp" />

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/continue_button"
            android:id="@+id/sign_up_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/continute_button"
            android:textColor="@color/wallet_holo_blue_light"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:id="@+id/have_acount_already"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/forget_passwrod"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:focusableInTouchMode="false" />
    </LinearLayout>

</RelativeLayout>
