<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/wallet_holo_blue_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="30dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="40dp"
            android:layout_height="400dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/welcome_txt"
                        android:id="@+id/welcom_text"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#FFFFFF"
                        android:textSize="35sp"
                        android:typeface="sans"
                        android:textStyle="bold"
                        android:layout_marginBottom="50dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:id="@+id/username"
                        android:inputType="text"
                        android:textColorHint="#FFFFFF"
                        android:drawableLeft="@drawable/user_icon"
                        android:background="@drawable/input_border"
                        android:typeface="monospace"
                        android:textColor="#FFFFFF"
                        android:hint="@string/username_hint" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/password"
                        android:hint="@string/password_hint"
                        android:textColorHint="#FFFFFF"
                        android:background="@drawable/input_border"
                        android:drawableLeft="@drawable/password_icon_lay"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#FFFFFF"
                        android:inputType="textPassword"
                        android:typeface="sans" />

                    <CheckBox
                        android:id="@+id/show_login_password"
                        android:button="@drawable/white_password_eye"
                        android:layout_marginLeft="-30dp"
                        android:layout_marginTop="11dp"
                        android:layout_height="30dp"
                        android:layout_width="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="60dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_user"
                        android:layout_gravity="center_horizontal"
                        android:text="LogIN"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/new_user_button"
                        android:text="Sign Up"
                        android:background="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:id="@+id/forget_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/forget_passwrod"
            android:textSize="12sp"
            android:focusableInTouchMode="false" />
    </LinearLayout>

</RelativeLayout>
