<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="#0D47A1">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_phone_android_white_24dp"
                    android:layout_gravity="center_vertical" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/home_welcome_message"
                        android:text="Add new Phone"
                        android:textSize="20dp"
                        android:textColor="#E3F2FD"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/exit_balance_dialog"
                    android:background="@drawable/cancel_button"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/account_balance_new_name"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/first_name_left_drawble"
            android:layout_height="40dp"
            android:singleLine="true"
            android:hint="@string/account_balanace_name_dialog"
            android:background="@drawable/account_balance_fields"
            android:autoText="false" />

        <EditText
            android:id="@+id/account_balance_new_ammount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:hint="@string/amount_balance_dialog"
            android:background="@drawable/account_balance_fields"
            android:drawableLeft="@drawable/phone_number_register"
            android:layout_marginTop="5dp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_account_balance_button"
            android:id="@+id/add_new_balance"
            android:textColor="@color/black_button"
            android:focusableInTouchMode="false"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginBottom="5dp"
            android:layout_gravity="right" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>